# pokemon-card-rules-faq

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  blog_post.md  diff_report.json  faq_data.json  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ruff-action.yml  test.yml  update-faq.yml  update_faq.yml
src/: blog_markdown.py  config.py  doc.md  generate_blog_md_from_diff.py  main.py  note_publisher.py  post_note_from_diff.py
tests/: __init__.py  test_main.py
tests/fixtures/: __init__.py  sample_html.py
