[tool.poetry]
name = "pokemon-card-rules-faq"
version = "0.1.0"
description = ""
authors = ["norikmb"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
